Fixed spotlight child grid spacing

--- a/chamber/css/desktop.css
+++ b/chamber/css/desktop.css
@@ -40,7 +40,8 @@
         grid-template-rows: repeat(3, 1fr);
     }
 
-    .main__spotlight:nth-child(3) {
+
+    .div__thirdspotlight {
         display: block;
     }
 
